tests/pass/pointers.plk
fn modify(ptr: *mut u8) {
    *ptr = 'c';
}

fn main() -> i32 {
    let mut a = 'a';
    putc(a);
    let b = &mut a;
    *b = 'b';
    putc(a);
    putc(*b);
    modify(&mut a);
    putc(a);
    putc(*b);
    return 0;
}

// OUTPUT: abbcc
